Show the zoom widget when switching documents

Somehow, the widget had become invisible.

BUG:398099